--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -130,6 +130,9 @@
       "@energinet-datahub/dh/metering-point/feature-overview": [
         "libs/dh/metering-point/feature-overview/src/index.ts"
       ],
+      "@energinet-datahub/dh/metering-point/feature-measurements": [
+        "libs/dh/metering-point/feature-measurements/src/index.ts"
+      ],
       "@energinet-datahub/dh/metering-point/feature-search": [
         "libs/dh/metering-point/feature-search/src/index.ts"
       ],
