--- a/apps/demo/tsconfig.editor.json
+++ b/apps/demo/tsconfig.editor.json
@@ -1,21 +1,15 @@
 {
   "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../../../dist/out-tsc",
-    "types": [],
-    "target": "ES2022",
-    "useDefineForClassFields": false
-  },
-  "files": ["src/main.ts"],
-  "include": ["src/**/*.d.ts"],
+  "include": ["src/**/*.ts"],
+  "compilerOptions": {},
   "exclude": [
     "jest.config.ts",
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
     "vite.config.ts",
     "vite.config.mts",
     "vitest.config.ts",
     "vitest.config.mts",
-    "src/**/*.test.ts",
-    "src/**/*.spec.ts",
     "src/**/*.test.tsx",
     "src/**/*.spec.tsx",
     "src/**/*.test.js",
