--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "review": "gh pr checkout --"
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "1.12.0",
+    "@analogjs/vite-plugin-angular": "1.19.0",
     "@angular/animations": "19.2.1",
     "@angular/cdk": "19.2.2",
     "@angular/common": "19.2.1",
@@ -128,9 +128,11 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@types/encoding-japanese": "2.2.1",
-    "@types/papaparse": "5.3.16",
     "@actions/core": "1.10.1",
+    "@analogjs/vitest-angular": "^1.19.0",
+    "@angular-devkit/build-angular": "~19.2.0",
+    "@angular-devkit/core": "~19.2.0",
+    "@angular-devkit/schematics": "~19.2.0",
     "@angular-eslint/eslint-plugin": "19.2.1",
     "@angular-eslint/eslint-plugin-template": "19.2.1",
     "@angular-eslint/template-parser": "19.2.1",
@@ -183,19 +185,23 @@
     "@swc/cli": "0.3.12",
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.11",
-    "@testing-library/angular": "17.3.6",
+    "@testing-library/angular": "17.4.0",
     "@testing-library/cypress": "10.0.3",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/user-event": "13.5.0",
     "@types/crypto-js": "4.2.2",
+    "@types/encoding-japanese": "2.2.1",
     "@types/express": "4.17.14",
     "@types/highlight.js": "10.1.0",
     "@types/inquirer": "9.0.7",
     "@types/jest": "29.5.14",
     "@types/jest-dev-server": "5.0.3",
     "@types/node": "20.11.0",
+    "@types/papaparse": "5.3.16",
     "@types/vimeo__player": "2.16.3",
     "@typescript-eslint/utils": "7.18.0",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "cross-env": "7.0.3",
     "crypto-js": "4.2.0",
     "cypress": "14.0.3",
@@ -203,7 +209,7 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "10.0.0",
     "eslint-import-resolver-typescript": "3.8.4",
-    "eslint-plugin-cypress": "2.13.4",
+    "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-sonarjs": "0.19.0",
     "eslint-plugin-storybook": "0.6.13",
@@ -217,6 +223,7 @@
     "jest-preset-angular": "14.4.2",
     "jest-preview": "0.3.1",
     "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "2.1.0",
     "minimatch": "10.0.1",
     "msw": "2.7.3",
@@ -231,11 +238,13 @@
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
     "typescript": "5.8.2",
-    "typescript-eslint": "7.16.0"
+    "typescript-eslint": "7.16.0",
+    "vite": "7.0.0",
+    "vitest": "3.2.4"
   },
   "volta": {
     "//node-comment": "Keep this in sync with 'engines' config at the top of the current file",
-    "node": "20.18.3",
+    "node": "24.3.0",
     "//bun-comment": "Keep this in sync with 'packageManager' property",
     "bun": "1.2.4"
   },
