--- a/apps/dh/app-dh/project.json
+++ b/apps/dh/app-dh/project.json
@@ -4,6 +4,8 @@
   "projectType": "application",
   "sourceRoot": "apps/dh/app-dh/src",
   "prefix": "dh",
+  "tags": ["product:dh", "type:app"],
+  "implicitDependencies": ["api-dh", "dh-shared-domain", "dh-globalization-assets-localization"],
   "targets": {
     "build": {
       "dependsOn": ["^generate"],
@@ -158,7 +160,9 @@
           "buildTarget": "app-dh:build:mocked"
         }
       },
-      "defaultConfiguration": "mocked"
+
+      "defaultConfiguration": "mocked",
+      "continuous": true
     },
     "lint": {
       "executor": "@nx/eslint:lint",
@@ -176,7 +180,5 @@
       "dependsOn": ["^generate"],
       "cache": false
     }
-  },
-  "tags": ["product:dh", "type:app"],
-  "implicitDependencies": ["api-dh", "dh-shared-domain", "dh-globalization-assets-localization"]
+  }
 }
