--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "@maskito/core": "2.5.0",
     "@maskito/kit": "2.5.0",
     "@maskito/phone": "2.5.0",
-    "@microsoft/applicationinsights-angularplugin-js": "15.3.5",
-    "@microsoft/applicationinsights-web": "3.3.6",
+    "@microsoft/applicationinsights-angularplugin-js": "^15.3.6",
+    "@microsoft/applicationinsights-web": "^3.3.9",
     "@ngneat/overview": "6.1.1",
     "@ngrx/component-store": "19.0.1",
     "@ngrx/operators": "19.0.1",
@@ -125,11 +125,6 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "vite-tsconfig-paths": "5.1.4",
-    "@typescript-eslint/typescript-estree": "8.18.0",
-    "@storybook/builder-vite": "^9.0.10",
-    "@types/encoding-japanese": "2.2.1",
-    "@types/papaparse": "5.3.16",
     "@actions/core": "1.10.1",
     "@angular-eslint/eslint-plugin": "20.0.0",
     "@angular-eslint/eslint-plugin-template": "20.0.0",
@@ -175,6 +170,7 @@
     "@storybook/addon-mdx-gfm": "^8.6.14",
     "@storybook/addon-storysource": "^8.6.14",
     "@storybook/angular": "9.0.10",
+    "@storybook/builder-vite": "9.0.10",
     "@storybook/test-runner": "0.23.0",
     "@storybook/testing-angular": "^1.0.3",
     "@swc-node/register": "1.9.1",
@@ -186,13 +182,16 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/user-event": "13.5.0",
     "@types/crypto-js": "4.2.2",
+    "@types/encoding-japanese": "2.2.1",
     "@types/express": "4.17.14",
     "@types/highlight.js": "10.1.0",
     "@types/inquirer": "9.0.7",
     "@types/jest": "29.5.14",
     "@types/jest-dev-server": "5.0.3",
     "@types/node": "20.11.0",
+    "@types/papaparse": "5.3.16",
     "@types/vimeo__player": "2.16.3",
+    "@typescript-eslint/typescript-estree": "8.18.0",
     "@typescript-eslint/utils": "7.18.0",
     "cross-env": "7.0.3",
     "crypto-js": "4.2.0",
@@ -230,6 +229,7 @@
     "ts-node": "10.9.2",
     "typescript": "5.8.2",
     "typescript-eslint": "7.16.0",
+    "vite-tsconfig-paths": "5.1.4",
     "xml2js": "^0.6.2"
   },
   "overrides": {
