feat(dh): move Settlement reports and Imbalance prices under Reports > Settlements

--- a/libs/dh/imbalance-prices/shell/project.json
+++ b/libs/dh/imbalance-prices/shell/project.json
@@ -17,5 +17,5 @@
       "outputs": ["{options.outputFile}"]
     }
   },
-  "tags": ["product:dh", "domain:imbalance-prices", "type:shell"]
+  "tags": ["product:dh", "domain:imbalance-prices", "type:feature"]
 }
