--- a/libs/gf/globalization/configuration-danish-locale/tsconfig.spec.json
+++ b/libs/gf/globalization/configuration-danish-locale/tsconfig.spec.json
@@ -2,9 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
-    "module": "commonjs",
+    "module": "esnext",
     "types": ["jest", "node"],
-    "target": "es2016"
+    "target": "esnext"
   },
   "files": ["src/test-setup.ts"],
   "include": ["**/*.spec.ts", "**/*.d.ts", "jest.config.ts"]
