--- a/libs/dh/admin/feature-permissions/tsconfig.spec.json
+++ b/libs/dh/admin/feature-permissions/tsconfig.spec.json
@@ -7,5 +7,5 @@
     "target": "es2016"
   },
   "files": ["src/test-setup.ts"],
-  "include": ["jest.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "include": ["**/*.spec.ts", "**/*.d.ts", "jest.config.ts"]
 }
