--- a/libs/watt/.eslintrc.json
+++ b/libs/watt/.eslintrc.json
@@ -1,10 +1,11 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*", "storybook-static"],
+  "ignorePatterns": ["!**/*", "storybook-static", "node_modules"],
   "overrides": [
     {
       "files": ["*.ts"],
       "excludedFiles": ["**/*.stories.ts", "**/+storybook/**/*.ts", "**/*.spec.ts"],
+
       "extends": ["plugin:@nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
       "rules": {
         "import/no-relative-parent-imports": "error",
