--- a/libs/dh/shared/domain/project.json
+++ b/libs/dh/shared/domain/project.json
@@ -18,10 +18,10 @@
     },
     "generate": {
       "executor": "nx:run-commands",
-      "cache": false,
+      "cache": true,
       "inputs": [
         "{workspaceRoot}/codegen.ts",
-        "{workspaceRoot}/libs/dh/shared/util-apollo/src/lib/codegen.js",
+        "{workspaceRoot}/libs/dh/shared/feature-graphql-codegen/**/*.js",
         "{workspaceRoot}/libs/**/*.graphql",
         "!{projectRoot}/src/lib/generated/graphql/**/*"
       ],
@@ -39,11 +39,11 @@
     },
     "watch-generate": {
       "executor": "nx:run-commands",
-      "cache": false,
+      "cache": true,
       "continuous": true,
       "inputs": [
         "{workspaceRoot}/codegen.ts",
-        "{workspaceRoot}/libs/dh/shared/util-apollo/src/lib/codegen.js",
+        "{workspaceRoot}/libs/dh/shared/feature-graphql-codegen/**/*.js",
         "{workspaceRoot}/libs/**/*.graphql",
         "!{projectRoot}/src/lib/generated/graphql/**/*"
       ],
