--- a/libs/dh/grid-areas/tsconfig.spec.json
+++ b/libs/dh/grid-areas/tsconfig.spec.json
@@ -6,6 +6,6 @@
     "target": "es2016",
     "types": ["jest", "node"]
   },
-  "files": ["src/test-setup.ts"],
+  "files": ["tests/test-setup.ts"],
   "include": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
 }
