--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@apollo/client": "3.13.8",
     "@azure/msal-angular": "4.0.12",
     "@azure/msal-browser": "4.12.0",
-    "@jsverse/transloco": "^7.6.1",
+    "@jsverse/transloco": "7.6.1",
     "@maskito/angular": "2.5.0",
     "@maskito/core": "2.5.0",
     "@maskito/kit": "2.5.0",
@@ -102,7 +102,7 @@
     "date-fns": "2.29.2",
     "date-fns-tz": "2.0.0",
     "dayjs": "1.11.13",
-    "encoding-japanese": "^2.2.0",
+    "encoding-japanese": "2.2.0",
     "express": "4.21.2",
     "graphql": "16.10.0",
     "graphql-sse": "2.5.4",
@@ -134,7 +134,7 @@
     "@angular/language-service": "20.0.3",
     "@babel/core": "7.26.10",
     "@babel/runtime": "7.26.10",
-    "@badeball/cypress-cucumber-preprocessor": "^22.1.0",
+    "@badeball/cypress-cucumber-preprocessor": "22.1.0",
     "@bahmutov/cypress-esbuild-preprocessor": "2.2.0",
     "@cypress/webpack-dev-server": "4.0.1",
     "@graphql-codegen/cli": "5.0.7",
@@ -162,17 +162,17 @@
     "@nx/vite": "21.2.0",
     "@nx/web": "21.2.0",
     "@nx/workspace": "21.2.0",
-    "@openapitools/openapi-generator-cli": "^2.13.4",
+    "@openapitools/openapi-generator-cli": "2.13.4",
     "@schematics/angular": "20.0.2",
-    "@storybook/addon-a11y": "^9.0.10",
-    "@storybook/addon-docs": "^9.0.10",
-    "@storybook/addon-links": "^9.0.10",
-    "@storybook/addon-mdx-gfm": "^8.6.14",
-    "@storybook/addon-storysource": "^8.6.14",
+    "@storybook/addon-a11y": "9.0.10",
+    "@storybook/addon-docs": "9.0.10",
+    "@storybook/addon-links": "9.0.10",
+    "@storybook/addon-mdx-gfm": "8.6.14",
+    "@storybook/addon-storysource": "8.6.14",
     "@storybook/angular": "9.0.10",
     "@storybook/builder-vite": "9.0.10",
     "@storybook/test-runner": "0.23.0",
-    "@storybook/testing-angular": "^1.0.3",
+    "@storybook/testing-angular": "1.0.3",
     "@swc-node/register": "1.9.1",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.5.7",
@@ -230,7 +230,7 @@
     "typescript": "5.8.2",
     "typescript-eslint": "7.16.0",
     "vite-tsconfig-paths": "5.1.4",
-    "xml2js": "^0.6.2"
+    "xml2js": "0.6.2"
   },
   "overrides": {
     "cli-spinners": "3.2.0"
@@ -241,7 +241,7 @@
     "//bun-comment": "Keep this in sync with 'packageManager' property",
     "bun": "1.2.17"
   },
-  "//packageManage$r-comment": "Version used in GitHub Actions pipelines",
+  "//packageManager-comment": "Version used in GitHub Actions pipelines",
   "packageManager": "bun@1.2.17",
   "msw": {
     "workerDirectory": "libs/gf/msw/util-msw/src/assets"
