Moved stuff around

--- a/libs/dh/market-participant/actors/feature-actors/tsconfig.lib.json
+++ b/libs/dh/market-participant/actors/feature-actors/tsconfig.lib.json
@@ -7,11 +7,11 @@
     "inlineSources": true,
     "types": []
   },
-  "exclude": [
-    "src/**/*.spec.ts",
-    "src/test-setup.ts",
-    "jest.config.ts",
-    "src/**/*.test.ts"
-  ],
-  "include": ["src/**/*.ts"]
+  "exclude": ["tests/**/*.spec.ts", "tests/test-setup.ts", "jest.config.ts", "tests/**/*.test.ts"],
+  "include": [
+    "src/**/*.ts",
+    "tests/test-setup.ts",
+    "tests/dh-json-util.spec.ts",
+    "tests/dh-actors-custom-filter-predicate.spec.ts"
+  ]
 }
