now i know how nx works +1 int

--- a/apps/eo/app-eo-landing-page/project.json
+++ b/apps/eo/app-eo-landing-page/project.json
@@ -5,6 +5,7 @@
   "prefix": "app",
   "sourceRoot": "apps/eo/app-eo-landing-page/src",
   "tags": [],
+  "implicitDependencies": ["eo-legal-feature-terms"],
   "targets": {
     "build": {
       "executor": "@nx/angular:application",
