--- a/apps/eo/app-eo/project.json
+++ b/apps/eo/app-eo/project.json
@@ -5,7 +5,7 @@
   "sourceRoot": "apps/eo/app-eo/src",
   "prefix": "eo",
   "tags": ["product:eo", "type:app"],
-  "implicitDependencies": ["eo-shared-styles", "app-eo-landing-page"],
+  "implicitDependencies": ["eo-shared-styles", "app-eo-landing-page", "eo-legal-feature-terms"],
   "targets": {
     "build": {
       "executor": "@nx/angular:application",
