--- a/libs/dh/market-participant/actors/feature-actors/tsconfig.lib.json
+++ b/libs/dh/market-participant/actors/feature-actors/tsconfig.lib.json
@@ -12,6 +12,8 @@
     "src/**/*.ts",
     "tests/test-setup.ts",
     "tests/dh-json-util.spec.ts",
-    "tests/dh-actors-custom-filter-predicate.spec.ts"
+    "tests/dh-actors-custom-filter-predicate.spec.ts",
+    "../../status-badge/src/status-badge.component.ts",
+    "../../types/src/types.ts"
   ]
 }
