--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "//engines-comment": "Keep this in sync with '.nvmrc', and 'volta' config at the bottom of this file.",
   "engines": {
-    "node": "20.18.3",
+    "node": "22.17.0",
     "npm": "Please use Bun instead of npm to install dependencies.",
     "yarn": "Please use Bun instead of yarn to install dependencies.",
-    "bun": "1.2.4"
+    "bun": "1.2.17"
   },
   "scripts": {
     "postinstall": "bun husky install",
@@ -42,7 +42,7 @@
     "ng": "nx",
     "nx": "nx",
     "start": "nx serve",
-    "dh:dev": "nx dev",
+    "dh:dev": "nx run app-dh:serve:development",
     "dh:mock": "nx run app-dh:serve:mocked",
     "dh:build": "nx run app-dh:build:production",
     "api:dev": "nx serve api-dh",
@@ -54,7 +54,7 @@
     "eo:build": "nx run app-eo:build:production",
     "eo:update-translations": "bun nx run eo-globalization-assets-localization:generate-translation-keys",
     "eo:e2e": "bun nx run e2e-eo:e2e --watch",
-    "test": "nx run generate && nx run-many --targets=test,component-test --parallel",
+    "test": "nx run-many --targets=test,component-test --parallel",
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "take": "nx run @energinet-datahub/tools/github:create-branch-from-issue",
@@ -64,24 +64,24 @@
     "review": "gh pr checkout --"
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "1.12.0",
-    "@angular/animations": "19.2.1",
-    "@angular/cdk": "19.2.2",
-    "@angular/common": "19.2.1",
-    "@angular/compiler": "19.2.1",
-    "@angular/core": "19.2.1",
-    "@angular/forms": "19.2.1",
-    "@angular/material": "19.2.2",
-    "@angular/platform-browser": "19.2.1",
-    "@angular/platform-browser-dynamic": "19.2.1",
-    "@angular/platform-server": "19.2.1",
-    "@angular/router": "19.2.1",
-    "@angular/service-worker": "19.2.1",
-    "@angular/ssr": "19.2.1",
+    "@analogjs/vite-plugin-angular": "1.17.1",
+    "@angular/animations": "20.0.3",
+    "@angular/cdk": "20.0.3",
+    "@angular/common": "20.0.3",
+    "@angular/compiler": "20.0.3",
+    "@angular/core": "20.0.3",
+    "@angular/forms": "20.0.3",
+    "@angular/material": "20.0.3",
+    "@angular/platform-browser": "20.0.3",
+    "@angular/platform-browser-dynamic": "20.0.3",
+    "@angular/platform-server": "20.0.3",
+    "@angular/router": "20.0.3",
+    "@angular/service-worker": "20.0.3",
+    "@angular/ssr": "20.0.2",
     "@apollo/client": "3.13.8",
     "@azure/msal-angular": "4.0.12",
     "@azure/msal-browser": "4.12.0",
-    "@jsverse/transloco": "^7.6.1",
+    "@jsverse/transloco": "7.6.1",
     "@maskito/angular": "2.5.0",
     "@maskito/core": "2.5.0",
     "@maskito/kit": "2.5.0",
@@ -95,8 +95,6 @@
     "@popperjs/core": "2.11.8",
     "@rx-angular/cdk": "17.0.1",
     "@rx-angular/template": "17.1.0",
-    "@storybook/builder-vite": "8.4.7",
-    "@typescript-eslint/typescript-estree": "8.18.0",
     "@vimeo/player": "2.17.0",
     "apollo-angular": "11.0.0",
     "chardet": "2.1.0",
@@ -104,6 +102,7 @@
     "date-fns": "2.29.2",
     "date-fns-tz": "2.0.0",
     "dayjs": "1.11.13",
+    "encoding-japanese": "2.2.0",
     "express": "4.21.2",
     "graphql": "16.10.0",
     "graphql-sse": "2.5.4",
@@ -121,24 +120,21 @@
     "prismjs": "1.30.0",
     "qs": "6.12.1",
     "rxjs": "7.8.2",
-    "storybook": "8.4.7",
+    "storybook": "9.0.10",
     "tslib": "2.4.0",
-    "vite-tsconfig-paths": "5.1.4",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@types/encoding-japanese": "2.2.1",
-    "@types/papaparse": "5.3.16",
     "@actions/core": "1.10.1",
-    "@angular-eslint/eslint-plugin": "19.2.1",
-    "@angular-eslint/eslint-plugin-template": "19.2.1",
-    "@angular-eslint/template-parser": "19.2.1",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "19.2.1",
-    "@angular/language-service": "19.2.1",
+    "@angular-eslint/eslint-plugin": "20.1.1",
+    "@angular-eslint/eslint-plugin-template": "20.1.1",
+    "@angular-eslint/template-parser": "20.1.1",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.0.3",
+    "@angular/language-service": "20.0.3",
     "@babel/core": "7.26.10",
     "@babel/runtime": "7.26.10",
-    "@badeball/cypress-cucumber-preprocessor": "20.0.0",
+    "@badeball/cypress-cucumber-preprocessor": "22.1.0",
     "@bahmutov/cypress-esbuild-preprocessor": "2.2.0",
     "@cypress/webpack-dev-server": "4.0.1",
     "@graphql-codegen/cli": "5.0.7",
@@ -153,33 +149,32 @@
     "@jsverse/transloco-keys-manager": "6.1.0",
     "@jsverse/transloco-optimize": "7.0.1",
     "@ngrx/eslint-plugin": "18.1.1",
-    "@nx/angular": "20.7.0",
-    "@nx/cypress": "20.7.0",
-    "@nx/devkit": "20.7.0",
-    "@nx/eslint": "20.7.0",
-    "@nx/eslint-plugin": "20.7.0",
-    "@nx/jest": "20.7.0",
-    "@nx/js": "20.7.0",
-    "@nx/plugin": "20.7.0",
-    "@nx/storybook": "20.7.0",
-    "@nx/vite": "20.7.0",
-    "@nx/web": "20.7.0",
-    "@nx/workspace": "20.7.0",
-    "@openapitools/openapi-generator-cli": "2.13.2",
-    "@schematics/angular": "19.2.1",
-    "@storybook/addon-a11y": "8.4.7",
-    "@storybook/addon-docs": "8.4.7",
-    "@storybook/addon-essentials": "8.4.7",
-    "@storybook/addon-interactions": "8.4.7",
-    "@storybook/addon-links": "8.4.7",
-    "@storybook/addon-mdx-gfm": "8.4.7",
-    "@storybook/addon-storysource": "8.4.7",
-    "@storybook/angular": "8.4.7",
-    "@storybook/core-server": "8.4.7",
-    "@storybook/test-runner": "0.19.1",
-    "@storybook/testing-angular": "0.0.12",
+    "@nx-dotnet/utils": "2.5.0",
+    "@nx/angular": "21.2.0",
+    "@nx/cypress": "21.2.0",
+    "@nx/devkit": "21.2.0",
+    "@nx/eslint": "21.2.0",
+    "@nx/eslint-plugin": "21.2.0",
+    "@nx/jest": "21.2.0",
+    "@nx/js": "21.2.0",
+    "@nx/plugin": "21.2.0",
+    "@nx/storybook": "21.2.0",
+    "@nx/vite": "21.2.0",
+    "@nx/web": "21.2.0",
+    "@nx/workspace": "21.2.0",
+    "@openapitools/openapi-generator-cli": "2.13.4",
+    "@schematics/angular": "20.0.2",
+    "@storybook/addon-a11y": "9.0.10",
+    "@storybook/addon-docs": "9.0.10",
+    "@storybook/addon-links": "9.0.10",
+    "@storybook/addon-mdx-gfm": "8.6.14",
+    "@storybook/addon-storysource": "8.6.14",
+    "@storybook/angular": "9.0.10",
+    "@storybook/builder-vite": "9.0.10",
+    "@storybook/test-runner": "0.23.0",
+    "@storybook/testing-angular": "1.0.3",
     "@swc-node/register": "1.9.1",
-    "@swc/cli": "0.3.12",
+    "@swc/cli": "0.6.0",
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.11",
     "@testing-library/angular": "17.3.6",
@@ -187,13 +182,16 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/user-event": "13.5.0",
     "@types/crypto-js": "4.2.2",
+    "@types/encoding-japanese": "2.2.1",
     "@types/express": "4.17.14",
     "@types/highlight.js": "10.1.0",
     "@types/inquirer": "9.0.7",
     "@types/jest": "29.5.14",
     "@types/jest-dev-server": "5.0.3",
     "@types/node": "20.11.0",
+    "@types/papaparse": "5.3.16",
     "@types/vimeo__player": "2.16.3",
+    "@typescript-eslint/typescript-estree": "8.18.0",
     "@typescript-eslint/utils": "7.18.0",
     "cross-env": "7.0.3",
     "crypto-js": "4.2.0",
@@ -205,7 +203,7 @@
     "eslint-plugin-cypress": "2.13.4",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-sonarjs": "0.19.0",
-    "eslint-plugin-storybook": "0.6.13",
+    "eslint-plugin-storybook": "9.0.10",
     "html-webpack-plugin": "5.6.0",
     "husky": "8.0.3",
     "inquirer": "9.2.19",
@@ -213,33 +211,38 @@
     "jest-canvas-mock": "2.5.2",
     "jest-dev-server": "6.2.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.4.2",
+    "jest-preset-angular": "14.6.0",
     "jest-preview": "0.3.1",
     "jiti": "2.4.2",
     "jsonc-eslint-parser": "2.1.0",
     "minimatch": "10.0.1",
     "msw": "2.7.3",
     "ng-mocks": "14.0.1",
-    "ng-packagr": "19.2.0",
-    "nx": "20.7.0",
+    "ng-packagr": "20.0.0",
+    "nx": "21.2.0",
     "prettier": "3.5.3",
     "semver": "7.7.1",
     "shell-quote": "1.8.2",
     "source-map-explorer": "2.5.3",
-    "storybook-addon-pseudo-states": "4.0.2",
+    "storybook-addon-pseudo-states": "9.0.10",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
     "typescript": "5.8.2",
-    "typescript-eslint": "7.16.0"
+    "typescript-eslint": "7.16.0",
+    "vite-tsconfig-paths": "5.1.4",
+    "xml2js": "0.6.2"
+  },
+  "overrides": {
+    "cli-spinners": "3.2.0"
   },
   "volta": {
     "//node-comment": "Keep this in sync with 'engines' config at the top of the current file",
-    "node": "20.18.3",
+    "node": "22.17.0",
     "//bun-comment": "Keep this in sync with 'packageManager' property",
-    "bun": "1.2.4"
+    "bun": "1.2.17"
   },
   "//packageManager-comment": "Version used in GitHub Actions pipelines",
-  "packageManager": "bun@1.2.4",
+  "packageManager": "bun@1.2.17",
   "msw": {
     "workerDirectory": "libs/gf/msw/util-msw/src/assets"
   }
