--- a/libs/dh/metering-point/feature-upload-measurements/tsconfig.lib.json
+++ b/libs/dh/metering-point/feature-upload-measurements/tsconfig.lib.json
@@ -2,13 +2,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
-    "target": "es2015",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
-    "lib": ["dom", "es2018"]
+    "types": []
   },
-  "exclude": ["**/*.worker.ts"],
-  "include": ["**/*.ts"]
+  "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
+  "include": ["src/**/*.ts"]
 }
