chore: configure Dependabot for GitHub Actions updates
chore: configure Dependabot for GitHub Actions updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,3 +8,17 @@ updates:
     directory: /source/hello-world
     schedule:
       interval: weekly
+
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+    groups:
+      security:
+        applies-to: security-updates
+        patterns:
+          - "*"
+      version-updates:
+        applies-to: version-updates
+        patterns:
+          - "*"
