test(dh, shared): replace jest with vitest in ui-util

--- a/nx.json
+++ b/nx.json
@@ -151,6 +151,10 @@
       ],
       "inputs": ["default", "{workspaceRoot}/.eslintrc.json"],
       "cache": true
+    },
+    "@nx/vite:test": {
+      "cache": true,
+      "inputs": ["default", "^production"]
     }
   },
   "namedInputs": {
