--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "review": "gh pr checkout --"
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "1.17.1",
+    "@analogjs/vite-plugin-angular": "1.19.1",
     "@angular/animations": "20.0.3",
     "@angular/cdk": "20.0.3",
     "@angular/common": "20.0.3",
@@ -126,10 +126,11 @@
   },
   "devDependencies": {
     "@actions/core": "1.10.1",
+    "@analogjs/vitest-angular": "1.19.1",
     "@angular-eslint/eslint-plugin": "20.1.1",
     "@angular-eslint/eslint-plugin-template": "20.1.1",
     "@angular-eslint/template-parser": "20.1.1",
-    "@angular/cli": "~20.0.0",
+    "@angular/cli": "20.0.0",
     "@angular/compiler-cli": "20.0.3",
     "@angular/language-service": "20.0.3",
     "@babel/core": "7.26.10",
@@ -156,11 +157,11 @@
     "@nx/eslint": "21.2.0",
     "@nx/eslint-plugin": "21.2.0",
     "@nx/jest": "21.2.0",
-    "@nx/js": "21.2.0",
+    "@nx/js": "21.3.2",
     "@nx/plugin": "21.2.0",
     "@nx/storybook": "21.2.0",
-    "@nx/vite": "21.2.0",
-    "@nx/web": "21.2.0",
+    "@nx/vite": "21.3.2",
+    "@nx/web": "21.3.2",
     "@nx/workspace": "21.2.0",
     "@openapitools/openapi-generator-cli": "2.13.4",
     "@schematics/angular": "20.0.2",
@@ -193,6 +194,7 @@
     "@types/vimeo__player": "2.16.3",
     "@typescript-eslint/typescript-estree": "8.18.0",
     "@typescript-eslint/utils": "7.18.0",
+    "@vitest/ui": "1.6.1",
     "cross-env": "7.0.3",
     "crypto-js": "4.2.0",
     "cypress": "14.0.3",
@@ -214,6 +216,7 @@
     "jest-preset-angular": "14.6.0",
     "jest-preview": "0.3.1",
     "jiti": "2.4.2",
+    "jsdom": "22.1.0",
     "jsonc-eslint-parser": "2.1.0",
     "minimatch": "10.0.1",
     "msw": "2.7.3",
@@ -229,7 +232,9 @@
     "ts-node": "10.9.2",
     "typescript": "5.8.2",
     "typescript-eslint": "7.16.0",
+    "vite": "5.4.19",
     "vite-tsconfig-paths": "5.1.4",
+    "vitest": "1.6.1",
     "xml2js": "0.6.2"
   },
   "overrides": {
