--- a/libs/dh/shared/ui-util/project.json
+++ b/libs/dh/shared/ui-util/project.json
@@ -4,17 +4,17 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/shared/ui-util/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:shared", "type:ui"],
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "executor": "@nx/vite:test",
+      "outputs": ["{options.reportsDirectory}"],
       "options": {
-        "jestConfig": "libs/dh/shared/ui-util/jest.config.ts"
+        "reportsDirectory": "../../../../coverage/libs/dh/shared/ui-util"
       }
     },
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:shared", "type:ui"]
+  }
 }
