--- a/libs/dh/shared/ui-util/tsconfig.lib.json
+++ b/libs/dh/shared/ui-util/tsconfig.lib.json
@@ -11,7 +11,20 @@
     "src/test-setup.ts",
     "**/*.spec.ts",
     "jest.config.ts",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "vite.config.ts",
+    "vite.config.mts",
+    "vitest.config.ts",
+    "vitest.config.mts",
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.tsx",
+    "src/**/*.test.js",
+    "src/**/*.spec.js",
+    "src/**/*.test.jsx",
+    "src/**/*.spec.jsx",
+    "src/test-setup.ts"
   ],
   "include": ["**/*.ts"]
 }
