--- a/package.json
+++ b/package.json
@@ -151,18 +151,18 @@
     "@jsverse/transloco-optimize": "7.0.1",
     "@ngrx/eslint-plugin": "18.1.1",
     "@nx-dotnet/utils": "2.5.0",
-    "@nx/angular": "21.2.0",
-    "@nx/cypress": "21.2.0",
-    "@nx/devkit": "21.2.0",
-    "@nx/eslint": "21.2.0",
-    "@nx/eslint-plugin": "21.2.0",
-    "@nx/jest": "21.2.0",
+    "@nx/angular": "21.3.2",
+    "@nx/cypress": "21.3.2",
+    "@nx/devkit": "21.3.2",
+    "@nx/eslint": "21.3.2",
+    "@nx/eslint-plugin": "21.3.2",
+    "@nx/jest": "21.3.2",
     "@nx/js": "21.3.2",
-    "@nx/plugin": "21.2.0",
-    "@nx/storybook": "21.2.0",
+    "@nx/plugin": "21.3.2",
+    "@nx/storybook": "21.3.2",
     "@nx/vite": "21.3.2",
     "@nx/web": "21.3.2",
-    "@nx/workspace": "21.2.0",
+    "@nx/workspace": "21.3.2",
     "@openapitools/openapi-generator-cli": "2.13.4",
     "@schematics/angular": "20.0.2",
     "@storybook/addon-a11y": "9.0.10",
@@ -222,7 +222,7 @@
     "msw": "2.7.3",
     "ng-mocks": "14.0.1",
     "ng-packagr": "20.0.0",
-    "nx": "21.2.0",
+    "nx": "21.3.2",
     "prettier": "3.5.3",
     "semver": "7.7.1",
     "shell-quote": "1.8.2",
@@ -238,7 +238,8 @@
     "xml2js": "0.6.2"
   },
   "overrides": {
-    "cli-spinners": "3.2.0"
+    "cli-spinners": "3.2.0",
+    "stylus": "0.0.1-security"
   },
   "volta": {
     "//node-comment": "Keep this in sync with 'engines' config at the top of the current file",
