--- a/libs/gf/util-browser/project.json
+++ b/libs/gf/util-browser/project.json
@@ -6,10 +6,10 @@
   "prefix": "gf",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/libs/gf/util-browser"],
+      "executor": "@nx/vite:test",
+      "outputs": ["{options.reportsDirectory}"],
       "options": {
-        "jestConfig": "libs/gf/util-browser/jest.config.ts"
+        "reportsDirectory": "../../../coverage/libs/gf/util-browser"
       }
     },
     "lint": {
