refactor: migrated dh-shared-util-table from jest -> vitest

--- a/libs/dh/shared/util-table/project.json
+++ b/libs/dh/shared/util-table/project.json
@@ -6,10 +6,10 @@
   "prefix": "dh",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/util-table"],
       "options": {
-        "jestConfig": "libs/dh/shared/util-table/jest.config.ts"
+        "config": "libs/dh/shared/util-table/vite.config.mts"
       }
     },
     "lint": {
