refactor: migrated dh-shared-util-application-insights from jest -> vitest

--- a/libs/dh/shared/util-application-insights/project.json
+++ b/libs/dh/shared/util-application-insights/project.json
@@ -6,12 +6,12 @@
   "prefix": "dh",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": [
         "{workspaceRoot}/coverage/libs/dh/shared/util-application-insights"
       ],
       "options": {
-        "jestConfig": "libs/dh/shared/util-application-insights/jest.config.ts"
+        "config": "libs/dh/shared/util-application-insights/vite.config.mts"
       }
     },
     "lint": {
