--- a/libs/dh/shared/util-application-insights/tsconfig.spec.json
+++ b/libs/dh/shared/util-application-insights/tsconfig.spec.json
@@ -2,10 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["jest", "node"],
+    "types": ["vitest/globals", "vitest/importMeta", "vite/client", "node", "vitest"],
     "target": "es2016"
   },
   "files": ["src/test-setup.ts"],
-  "include": ["jest.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "include": ["vite.config.mts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
 }
