--- a/libs/dh/shared/util-new-version-manager/tsconfig.spec.json
+++ b/libs/dh/shared/util-new-version-manager/tsconfig.spec.json
@@ -2,13 +2,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
-    "module": "commonjs",
     "target": "es2016",
-    "types": ["jest", "node"]
+    "types": ["vitest/globals", "vitest/importMeta", "vite/client", "node", "vitest"]
   },
   "files": ["src/test-setup.ts"],
   "include": [
-    "jest.config.ts",
+    "vite.config.mts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
