refactor: migrated dh-message-archive-domain from jest -> vitest

--- a/libs/dh/message-archive/domain/project.json
+++ b/libs/dh/message-archive/domain/project.json
@@ -6,10 +6,10 @@
   "prefix": "dh",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/message-archive/domain"],
       "options": {
-        "jestConfig": "libs/dh/message-archive/domain/jest.config.ts"
+        "config": "libs/dh/message-archive/domain/vite.config.mts"
       }
     },
     "lint": {
