--- a/libs/dh/wholesale/domain/project.json
+++ b/libs/dh/wholesale/domain/project.json
@@ -6,10 +6,10 @@
   "prefix": "dh",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/dh/wholesale/domain/jest.config.ts"
+        "config": "libs/dh/wholesale/domain/vite.config.mts"
       }
     },
     "lint": {
