--- a/libs/dh/shared/ui-validators/tsconfig.spec.json
+++ b/libs/dh/shared/ui-validators/tsconfig.spec.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"],
+    "types": ["vitest/globals", "node"],
     "target": "es2016"
   },
   "files": ["src/test-setup.ts"],
-  "include": ["jest.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "include": ["vite.config.mts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
 }
