--- a/libs/dh/shared/util-assert/project.json
+++ b/libs/dh/shared/util-assert/project.json
@@ -7,10 +7,10 @@
   "tags": ["product:dh", "domain:shared", "type:util"],
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "executor": "@nx/vite:test",
+      "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/util-assert"],
       "options": {
-        "jestConfig": "libs/dh/shared/util-assert/jest.config.ts"
+        "config": "libs/dh/shared/util-assert/vite.config.mts"
       }
     },
     "lint": {
