refactor: migrated dh-shared-util-operators from jest -> vitest

--- a/libs/dh/shared/util-operators/project.json
+++ b/libs/dh/shared/util-operators/project.json
@@ -6,10 +6,10 @@
   "prefix": "dh",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "executor": "@nx/vite:test",
+      "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/util-operators"],
       "options": {
-        "jestConfig": "libs/dh/shared/util-operators/jest.config.ts"
+        "config": "libs/dh/shared/util-operators/vite.config.mts"
       }
     },
     "lint": {
