refactor: migrated eo-shared-utilities from jest -> vitest

--- a/libs/eo/shared/utilities/project.json
+++ b/libs/eo/shared/utilities/project.json
@@ -6,10 +6,10 @@
   "prefix": "eo",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/eo/shared/utilities"],
       "options": {
-        "jestConfig": "libs/eo/shared/utilities/jest.config.ts"
+        "config": "libs/eo/shared/utilities/vite.config.mts"
       }
     },
     "lint": {
