refactor: migrated gf-configuration-danish-locale from jest -> vitest

--- a/libs/gf/globalization/configuration-danish-locale/project.json
+++ b/libs/gf/globalization/configuration-danish-locale/project.json
@@ -6,12 +6,12 @@
   "prefix": "gf",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": [
         "{workspaceRoot}/coverage/libs/gf/globalization/configuration-danish-locale"
       ],
       "options": {
-        "jestConfig": "libs/gf/globalization/configuration-danish-locale/jest.config.ts"
+        "config": "libs/gf/globalization/configuration-danish-locale/vite.config.mts"
       }
     },
     "lint": {
