--- a/libs/gf/globalization/configuration-danish-locale/tsconfig.spec.json
+++ b/libs/gf/globalization/configuration-danish-locale/tsconfig.spec.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
     "module": "esnext",
-    "types": ["jest", "node"],
+    "types": ["vitest/globals", "node"],
     "target": "esnext"
   },
   "files": ["src/test-setup.ts"],
-  "include": ["**/*.spec.ts", "**/*.d.ts", "jest.config.ts"]
+  "include": ["**/*.spec.ts", "**/*.d.ts", "vite.config.mts"]
 }
