refactor: migrated gf-globalization-data-access-localization from jest -> vitest

--- a/libs/gf/globalization/data-access-localization/project.json
+++ b/libs/gf/globalization/data-access-localization/project.json
@@ -6,12 +6,12 @@
   "prefix": "gf",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": [
         "{workspaceRoot}/coverage/libs/gf/globalization/data-access-localization"
       ],
       "options": {
-        "jestConfig": "libs/gf/globalization/data-access-localization/jest.config.ts"
+        "config": "libs/gf/globalization/data-access-localization/vite.config.mts"
       }
     },
     "lint": {
