--- a/libs/dh/globalization/configuration-localization/project.json
+++ b/libs/dh/globalization/configuration-localization/project.json
@@ -6,12 +6,12 @@
   "prefix": "dh",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": [
         "{workspaceRoot}/coverage/libs/dh/globalization/configuration-localization"
       ],
       "options": {
-        "jestConfig": "libs/dh/globalization/configuration-localization/jest.config.ts"
+        "config": "libs/dh/globalization/configuration-localization/vite.config.mts"
       }
     },
     "lint": {
