refactor: migrated eo-shared-services from jest -> vitest

--- a/libs/eo/shared/services/project.json
+++ b/libs/eo/shared/services/project.json
@@ -6,10 +6,10 @@
   "prefix": "eo",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/eo/shared/services"],
       "options": {
-        "jestConfig": "libs/eo/shared/services/jest.config.ts"
+        "config": "libs/eo/shared/services/vite.config.mts"
       }
     },
     "lint": {
