wip: partial migration of dh-shared-feature-authorization to Vitest

--- a/libs/dh/shared/feature-authorization/project.json
+++ b/libs/dh/shared/feature-authorization/project.json
@@ -6,12 +6,12 @@
   "prefix": "dh",
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": [
         "{workspaceRoot}/coverage/libs/dh/shared/feature-authorization"
       ],
       "options": {
-        "jestConfig": "libs/dh/shared/feature-authorization/jest.config.ts"
+        "config": "libs/dh/shared/feature-authorization/vite.config.mts"
       }
     },
     "lint": {
